2023 updates to photo, resume and projects

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,7 +1,7 @@
-$color-main-1: #9C2855;
-$color-main-2: #E14282;
-$color-light: #FADCE4;
-$color-darker: #7F2044;
+$color-main-1: #9c2855;
+$color-main-2: #e14282;
+$color-light: #fadce4;
+$color-darker: #7f2044;
 $color-darkest: #591630;
 $white: #eee;
 $color-trans: rgba(225, 66, 130, 0.5);
