--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Indie+Flower&display=swap");
+
 .h1 {
   font-size: 2rem;
   margin: 1rem 0;
@@ -15,7 +17,6 @@
 .h3 {
   margin: 1rem 0 0.5rem 0;
 }
-
 
 .footer__h2 {
   color: $color-main-1;
